# gokhas_project

./: LICENSE  README.md  install.sh  install_zed_sdk.sh
gokhas_communication/: .gitignore  CMakeLists.txt  README.md  package.xml
gokhas_communication/embedded/: README_STM32_REPRODUCE.md  stm32_reproduce.ino
gokhas_communication/launch/: communication.launch
gokhas_communication/msg/: ControlMessage.msg  JointMessage.msg  communication.msg
gokhas_communication/scripts/: duplex_uart_combined.py  duplex_uart_separated.py  uart_com.py
gokhas_interface/: CMakeLists.txt  CONFIG_SYSTEM_SUMMARY.md  README.md  TEST_SCENARIOS.md  package.xml
gokhas_interface/config/: params.yaml
gokhas_interface/launch/: gokhas_interface.launch  interface.launch  test_config.launch
gokhas_interface/scripts/: delayed_launch.py  launch_interface.py  test_config.py
gokhas_interface/scripts/src/: __init__.py
gokhas_interface/scripts/src/com/: __init__.py  publisher.py
gokhas_interface/scripts/src/ros/: __init__.py  ros_bridge.py
gokhas_interface/scripts/src/ui/: __init__.py  control_handlers.py  custom_widgets.py  main_window.py
gokhas_interface/scripts/src/ui/resources/: __init__.py  resource.py
gokhas_interface/scripts/src/ui/resources/styles/: border_button.qss  calibration_buttons.qss  close_button.qss  dark_theme.qss  helper_button.qss  joint_controls.qss  labels.qss  light_theme.qss  theme_buttons.qss  toggle_buttons.qss
gokhas_perception/: CMakeLists.txt  README.md  package.xml
gokhas_perception/include/tracker_with_cloud_node/: tracker_with_cloud_node.h
gokhas_perception/launch/: tracker.launch  tracker_with_cloud.launch  usb_cam.launch
gokhas_perception/script/: 2Dto3D.py  2Dto3D_camerainfo.py  2Dto3D_depth.py  2Dto3D_pointcloud.py  autonomous_targeting.py  autonomous_targeting_2d.py  autonomous_targeting_3d.py  profile_2dto3d.py  test_pixel_to_3d_service.py  tracker_node.py
gokhas_perception/src/: tracker_with_cloud_node.cpp
gokhas_perception/srv/: PixelTo3D.srv
gokhas_zed_ros_wrapper/: README.md
gokhas_zed_ros_wrapper/zed-ros-interfaces/: README.md
gokhas_zed_ros_wrapper/zed_nodelets/src/zed_nodelet/src/: zed_wrapper_nodelet.cpp
gokhas_zed_ros_wrapper/zed_wrapper/launch/: zedm.launch
gokhas_zed_ros_wrapper/zed_wrapper/launch/include/: zed_camera.launch.xml  zed_camera_nodelet.launch  zed_no_tf.launch.xml
gokhas_zed_ros_wrapper/zed_wrapper/params/: common.yaml
