<?xml version="1.0"?>
<package format="2">
  <name>gokhas_communication</name>
  <version>1.0.0</version>
  <description>This package provides communication between GokHAS Embedded and GokHAS Interface for the GokHAS Project.</description>

  <maintainer email="ahmetceyhunbilir16@gmail.com">Ahmet Ceyhun Bilir</maintainer>
  <maintainer email="meltem.aman@gmail.com">Beyza Meltem Amanet</maintainer>

  <license>MIT</license>

  <author email="ahmetceyhunbilir16@gmail.com">Ahmet Ceyhun Bilir</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
